# diffusion_models_for_speech

./: .gitignore  Makefile  README.md  download_data.py  environment_local.sh  evironment_hpc.sh  generate_dtu_hpc.sh  generate_ep0_da.sh  generate_ep0_tj.sh  generate_ep1_da.sh  generate_ep1_tj.sh  generate_pretrained_da.sh  generate_pretrained_tj.sh  get_started.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  train_dtu_hpc.sh
bash/: finetune_dtu_hpc.sh  generate_dtu_hpc.sh  generate_ep0_da.sh  generate_ep0_tj.sh  generate_ep1_da.sh  generate_ep1_tj.sh  generate_pretrained_da.sh  generate_pretrained_tj.sh  train_dtu_hpc.sh
configs/: config.yaml  config_evaluate.yaml  config_finetuning.yaml  config_pretrained.yaml  config_synthesis.yaml  config_training.yaml  preprocessing_config.yaml
configs/callbacks/: callbacks.yaml
configs/datamodule/: basic.yaml  ljspeech.yaml  multilang_cond.yaml  multilang_uncond.yaml  nst_da_cond.yaml  nst_da_uncond.yaml  tjspeech_cond.yaml  tjspeech_cond_pretrained.yaml  tjspeech_uncond.yaml
configs/evaluate/: basic.yaml
configs/inference/: basic.yaml  epoch0.yaml  epoch1.yaml  finetuned.yaml  pretrained.yaml
configs/logging/: wandb.yaml
configs/loss/: L1loss.yaml  NLLLoss.yaml  (+4 more)
experiments/: hello_metrics.py
notebooks/: 0.0-saf-dataset-lang-split.ipynb  0.1-saf-preprocessing-debugging.ipynb  present_metrics_demo.ipynb  test.ipynb
scripts/: download_danish_dataset.py  evaluate.py  finetune.py  inference.py  lj_data_prep.py  preprocess.py  train.py
src/: version.py
tests/: check_model.ipynb
(+40 files in other folders)
